--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -22,7 +22,7 @@ Keywords: effect measure, probability model, survival & competing risks
 
 ------------------------------------------------------------------------
 
-### Cox回帰はハザード比のモデルというより比例ハザード性のモデル
+### Cox回帰はハザード比ではなく比例ハザード性のモデル
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -80,36 +80,39 @@ $$
 :::
 
 ::: voice-father
-お父さん「この式は本質的なところしか書いてないからね。Cox回帰のよさはいくつもあるけど、$\lambda_1(x)$と$\lambda_2(x)$はどんな関数でもいいという点が、とても実用的なんだ。比例ハザード性という仮定はあるけどね。その点、指数分布はハザードが定数だから、ずっと融通が利かない。データへの当てはまりが悪いんだ」
+お父さん「この式は本質的なところしか書いてないからね。でも、教科書に書いてあるCox回帰の式と、比例ハザード性というエッセンスは同じ。教科書は対数ハザード比を回帰係数$\beta$に置き換えて、ベクトル表記してあるだけだ」
+:::
+::::::::::::::::::::::::::::::::: 
+
+$$
+\lambda(x)=\lambda_0(x)\exp(\beta Z)}
+$$
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-father
+お父さん「Cox回帰のよさはいくつもあるけど、$\lambda_1(x)$と$\lambda_2(x)$はどんな関数でもいいという点が、とても実用的なんだ。比例ハザード性という仮定はあるけどね。その点、指数分布はハザードが定数だから、ずっと融通が利かない。データへの当てはまりが悪いんだ」
 :::
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple" title="補2重対数変換: ハザード比を抽出する変換"}
-あまり知られていませんが、Cox回帰に代えて一般化線型モデルでも（離散時間の枠組みで）ハザードを扱うことができます。リンク関数として補2重対数変換（`glm`でいえば `binomial(link = "cloglog")`）を選びます。直感を得るため、指数分布のもとで「生存関数に log(-log) を当てる」と何が起きるかを見てみましょう。
+あまり知られていませんが、Cox回帰に代えて一般化線型モデルでも（離散時間の枠組みで）ハザード比を推定できます。リンク関数として補2重対数変換（`glm`でいえば `binomial(link = "cloglog")`）を選びます。直感を得るため、指数分布のもとで「生存関数に log(-log) を当てる」と何が起きるかを見てみましょう。指数分布のハザード比と回帰係数を$\beta=\log(HR)$と表記ことにします。
 
-2群の生存関数を
-\[
-S_1(x)=\exp(-\lambda_1 x),\qquad S_2(x)=\exp(-\lambda_2 x)
-\]
-とします。それぞれに対して
-\[
-\log\{-\log S(x)\}
-\]
-（生存関数の *log(-log)* 変換）を適用すると、
-\[
-\log\{-\log S_1(x)\}=\log(\lambda_1 x),\qquad
-\log\{-\log S_2(x)\}=\log(\lambda_2 x)
-\]
-となります。
+2群の生存関数を、ハザード$\lambda_1$と$\lambda_2$を使って
+$S_1(x)=\exp(-\lambda_1 x)$
 
-同じ時点\(x\)の下で、2群の差を取れば、
-\[
-\log\{-\log S_1(x)\}-\log\{-\log S_2(x)\}
-= \log(\lambda_1 x)-\log(\lambda_2 x)
-= \log(\lambda_1/\lambda_2)
-= \log(HR)
-\]
-となり、*時間項 \(t\)* は打ち消されて **ハザード比だけが残ります**。この変換は、Kaplan–Meier曲線を用いた比例ハザード性の図示（いわゆるログログプロット）でも使われます。
+$S_2(x)=\exp(-\lambda_2 x)$
+
+とします。それぞれ対数をとって符号を変えます。
+
+$-\log\{S_1(x)\}=\lambda_1 x$
+
+$-\log\{S_2(x)\}=\lambda_2 x$
+
+もう一度対数をとり、さらに差をとってみます。
+
+$\log[-\log\{S_1(x)\}]-\log[\log\{S_2(x)\}]=\log(\lambda_1 x)-\log(\lambda_2 x)=\log(HR)=\beta$
+
+つまり、同じ時点$x$の下で2群の差をとると、**時間$x$がキャンセルして回帰係数だけが残ります**。生存時間解析の裏では、この生存関数から回帰係数（対数ハザード比）を抽出する変換が利用されています。その一例は、Kaplan–Meier曲線を用いた比例ハザード性の図示（いわゆるログログプロット）です。
 :::
 
 ::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
