--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -80,12 +80,12 @@ $$
 :::
 
 ::: voice-father
-お父さん「この式は本質的なところしか書いてないからね。でも、教科書に書いてあるCox回帰の式と、比例ハザード性というエッセンスは同じ。教科書は対数ハザード比を回帰係数$\beta$に置き換えて、ベクトル表記してあるだけだ」
+お父さん「この式は本質的なところしか書いてないからね。でも、教科書に書いてあるCox回帰の式と、比例ハザード性というエッセンスは同じ。教科書は対数ハザード比を回帰係数ベクトル$\beta$に置き換えて、ベクトル表記してあるだけだ」
 :::
 ::::::::::::::::::::::::::::::::: 
 
 $$
-\lambda(x)=\lambda_0(x)\exp(\beta Z)}
+\lambda(x)=\lambda_0(x)\exp(Z \beta)
 $$
 
 ::::::::::::::::::::::::::::::::: dialogue
@@ -95,9 +95,10 @@ $$
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple" title="補2重対数変換: ハザード比を抽出する変換"}
-あまり知られていませんが、Cox回帰に代えて一般化線型モデルでも（離散時間の枠組みで）ハザード比を推定できます。リンク関数として補2重対数変換（`glm`でいえば `binomial(link = "cloglog")`）を選びます。直感を得るため、指数分布のもとで「生存関数に log(-log) を当てる」と何が起きるかを見てみましょう。指数分布のハザード比と回帰係数を$\beta=\log(HR)$と表記ことにします。
+あまり知られていませんが、Cox回帰に代えて一般化線型モデルでも（離散時間の枠組みで）ハザード比を推定できます。リンク関数として補2重対数変換（`glm`でいえば `binomial(link = "cloglog")`）を選びます。Cox回帰の構造を深堀するために、指数分布のもとで「生存関数に log(-log) を当てる」と何が起きるかを見てみましょう。指数分布のハザード比と回帰係数を$\beta=\log(HR)$と表すことにします。
 
 2群の生存関数を、ハザード$\lambda_1$と$\lambda_2$を使って
+
 $S_1(x)=\exp(-\lambda_1 x)$
 
 $S_2(x)=\exp(-\lambda_2 x)$
@@ -110,9 +111,9 @@ $-\log\{S_2(x)\}=\lambda_2 x$
 
 もう一度対数をとり、さらに差をとってみます。
 
-$\log[-\log\{S_1(x)\}]-\log[\log\{S_2(x)\}]=\log(\lambda_1 x)-\log(\lambda_2 x)=\log(HR)=\beta$
+$\log[-\log\{S_1(x)\}]-\log[-\log\{S_2(x)\}]=\log(\lambda_1 x)-\log(\lambda_2 x)=\log(HR)=\beta$
 
-つまり、同じ時点$x$の下で2群の差をとると、**時間$x$がキャンセルして回帰係数だけが残ります**。生存時間解析の裏では、この生存関数から回帰係数（対数ハザード比）を抽出する変換が利用されています。その一例は、Kaplan–Meier曲線を用いた比例ハザード性の図示（いわゆるログログプロット）です。
+この結果は、比例ハザード性の下では常に成り立ちます。つまり、同じ時点$x$の下で2群の差をとると、**時間$x$がキャンセルして回帰係数$\beta$だけが残ります**。生存時間解析の裏では、生存関数から回帰係数（対数ハザード比）を抽出するために、この変換が使われています。その一例は、比例ハザード性の図示（いわゆるログログプロット）です。Kaplan–Meier曲線の補2重対数変換をとると、曲線間の比例ハザード性が、曲線の平行移動に置き換わるのです。
 :::
 
 ::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
