--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -152,12 +152,8 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 ### このシリーズとRスクリプト
 
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
-- [P-Value Explanations That Seem Plausible at First Glance]
-- [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
-- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks]
-- [Understanding Confidence Intervals via Hypothetical Replications in R]
-- [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
-
+- [P-Value Explanations That Seem Plausible at First Glance](frequentist-3.html)
+- [Beyond 0.05: Interpreting P-Values in a Clinical Trial](frequentist-3.html)
 - [frequentist.R](../from-coffee-chat-to-r/frequentist.R)
 
 ### 過去のシリーズと用語集
