--- a/kanji_en/index.qmd
+++ b/kanji_en/index.qmd
@@ -17,21 +17,15 @@ Imagine a large square. Originally, this square represented a mat or a surface, 
 Within this square lies a single human figure, arms and legs outstretched.
 This image retains a sense of a human being entrusting themselves to the universe or the world around them.
 
-The second character, *ga*, is more concrete.
+The second character, *ga* (or *ka*), is more concrete.
 It is composed of two vertical parts.
 The lower part represents a tree.
 Above it is a shape that depicts fruit growing on the branches—fruit that has reached full maturity.
 Here, *ga* signifies not a process in progress, but something that has fully developed and come to completion.
 
-The third character, *sui*, can also be divided into two parts, though this time horizontally.
-On the left is a component representing a hand; on the right, a bird.
-Originally, this likely evoked a concrete action, such as attempting to grasp or push something forward.
-Over time, that literal image faded, and the character took on a more abstract meaning.
-From a modern perspective, it is more natural to read these components broadly as action and object.
+The third character, *sui*, also splits in two—this time left and right: a hand on the left, a bird on the right. Originally, this likely evoked a concrete action, such as attempting to grasp or push something forward. Over time, that literal image faded, and the character took on a more abstract meaning. From a modern perspective, it is more natural to read these components broadly as action and object.
 
-The final character, *ron*, is the most abstract.
-Let us begin with its right-hand component.
-This element conveys the idea of arranging multiple elements in an orderly and structured way.
+The final character, *ron*, is the most abstract. Let us begin with its right-hand component. This element conveys the idea of arranging multiple elements in an orderly and structured way.
 On the left is a component that, even in modern form, directly signifies language.
 Together, *ron* represents the act of giving structure and order to ideas through words.
 
