--- a/en/study-design-4.qmd
+++ b/en/study-design-4.qmd
@@ -203,7 +203,7 @@ Dad: "For a typical survival data, the event variable is binary and indicates wh
 ::::::::::::::::::::::::::::::::: 
 
 
-::: {.callout-note appearance="simple"  title="Entering survival data"}
+::: {.callout-note appearance="simple" collapse="true" title="Entering survival data"}
 
 Because survival data consist of a pair of variables, you also need to specify them as a pair when you pass them to R functions. The **survival** package provides a dedicated input function `Surv()` for this purpose, which is used by functions such as `survfit()` and `coxph()`. The exact input format depends on the package. For example, the **mets** package defines a separate `Event()` function. The `cifplot()` function in the **cifmodeling** package accepts both `Surv()` and `Event()`.
 
