--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -133,7 +133,7 @@ Keywords: clinical trial, language & writing, research hypothesis, survival & co
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
+::: {.callout-note appearance="simple" collapse="true"  title="臨床エンドポイントと代替エンドポイント"}
 OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが**臨床エンドポイント（clinical endpoint）**とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
 その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、**代替エンドポイント（surrogate endpoint）**として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and DeMets 1996）。
