--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -160,7 +160,7 @@ Keywords: bias, R simulation, study design, survival & competing risks
 お父さん「イベント変数は、いわゆる生存時間データの場合は、イベントが観察されたか、打ち切りになったかを表す2値データ。時間変数は、この場合は“退院日から復職日までの期間”か“退院日から調査日までの期間”のどちらかになる」
 :::
 
-::: {.callout-note appearance="simple"  title="生存時間データの入力"}
+::: {.callout-note appearance="simple" collapse="true" title="生存時間データの入力"}
 
 生存時間データは2つの変数の組であるため、Rの関数に入力するときもペアで指定する必要があります。**survival**パッケージの`survfit()`や`coxph()`では、実は入力専用の関数`Surv()`を用意しています。入力の仕様はパッケージによってまちまちで、たとえば**mets**パッケージでは`Event()`を別に定義して用いています。**cifmodeling**パッケージの`cifplot()`は、`Surv()`と`Event()`の両方に対応しています。
 
