--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -149,7 +149,7 @@ Keywords: clinical trial, language & writing, p-value, survival & competing risk
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
 
-### このシリーズとRスクリプト
+### 次のエピソードとRスクリプト
 
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
 - [P-Value Explanations That Seem Plausible at First Glance](frequentist-3.html)
