--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -373,7 +373,7 @@ print(coverage_800)
 
 - [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
 
-### このシリーズとRスクリプト
+### 次のエピソードとRスクリプト
 
 - [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
 - [Understanding Confidence Intervals via Hypothetical Replications in R](frequentist-5.html)
