--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -250,17 +250,12 @@ print(odds_ratio)
 
 ### 次のエピソードとRスクリプト
 
-- [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
 - [From Risk to Logistic Regression](logistic-regression-2.html)
-- [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
-- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
-- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
-- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
 - [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ### 過去のシリーズと用語集
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Statistical Terms in Plain Language](glossary.html)
-
