--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -209,13 +209,14 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 
 ### 次のエピソードとRスクリプト
 
+- [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
+- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
+
+### このシリーズのまとめ
+
 - [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
 - [From Risk to Logistic Regression](logistic-regression-2.html)
 - [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
-- [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
-- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
-- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
-- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
 ### 過去のシリーズと用語集
 
