--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -314,18 +314,21 @@ Keywords: confounding & collapsibility, effect measure, generalized linear model
 - [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### 次のエピソードとRスクリプト
+- [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
+- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
+::: {.callout-note appearance="simple" collapse="true" title="このシリーズのまとめはこちら"}
 - [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
 - [From Risk to Logistic Regression](logistic-regression-2.html)
 - [Logit: How a Transformation Shapes an Effect](logistic-regression-3.html)
 - [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
 - [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
-- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
+:::
 
-### 過去のシリーズと用語集
-
+::: {.callout-note appearance="simple" collapse="true" title="過去のシリーズと用語集はこちら"}
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
 - [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Statistical Terms in Plain Language](glossary.html)
+:::
