--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -177,6 +177,12 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 :::
 
 ### 次のエピソードとRスクリプト
+- [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
+- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
+
+::: {.callout-note appearance="simple" collapse="true" title="あのエピソードに飛べたい、そんな方はこちら"}
+
+**このシリーズのエピソード**
 
 - [Understanding Collapsibility of Effect Measures: Marginal vs Stratified](logistic-regression-1.html)
 - [From Risk to Logistic Regression](logistic-regression-2.html)
@@ -184,11 +190,15 @@ $\log(\frac{\hat\pi_i}{1-\hat\pi_i})=\hat\beta_0+\hat\beta_1X_{i,1}+...+\hat\bet
 - [Where My Logistic Regression Went Wrong](logistic-regression-4.html)
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-5.html)
 - [Understanding Confounding in Effect Measures: Marginal vs Stratified](logistic-regression-6.html)
-- [logistic-regression.R](../from-coffee-chat-to-r/logistic-regression.R)
 
-### 過去のシリーズと用語集
+**過去のシリーズ**
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
 - [Silent Confusions Hidden in Percentages](effects-1.html)
+
+**用語集**
+
 - [Statistical Terms in Plain Language](glossary.html)
+:::
