--- a/jp/effects-1.qmd
+++ b/jp/effects-1.qmd
@@ -195,7 +195,7 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 - [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
 - [effects.R](../from-coffee-chat-to-r/effects.R)
 
-::: {.callout-note appearance="simple" collapse="true" title="あのエピソードに飛べたい、そんな方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="他のエピソードはこちら"}
 
 **このシリーズのエピソード**
 
@@ -208,9 +208,9 @@ $VE=\frac{\pi_2-\pi_1}{\pi_2}=95 \%$
 
 **過去のシリーズ**
 
-- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
-- [Reading a Paper over a Cup of Coffee](frequentist-1.html)
-- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
+- [Study Design I](study-design-1.html)
+- [Frequentist Thinking I](frequentist-1.html)
+- [Frequentist Experiments I](frequentist-4.html)
 
 **用語集**
 
