--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -269,7 +269,7 @@ $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 - [When Odds Ratios Approximate Risk Ratios—and When They Fail](effects-3.html)
 - [effects.R](../from-coffee-chat-to-r/effects.R)
 
-::: {.callout-note appearance="simple" collapse="true" title="あのエピソードに飛べたい、そんな方はこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="他のエピソードはこちら"}
 
 **このシリーズのエピソード**
 
@@ -282,9 +282,9 @@ $PAF=\frac{p(RR-1)}{p(RR-1)+1}$
 
 **過去のシリーズ**
 
-- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
-- [Reading a Paper over a Cup of Coffee](frequentist-1.html)
-- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
+- [Study Design I](study-design-1.html)
+- [Frequentist Thinking I](frequentist-1.html)
+- [Frequentist Experiments I](frequentist-4.html)
 
 **用語集**
 
