--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -59,7 +59,7 @@ Keywords: effect measure, language & writing, observational study, research hypo
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="寄与割合とその関連指標1. 集団寄与割合"}
+::: {.callout-note appearance="simple"  title="集団寄与割合"}
 疫学研究では、一般集団を対象にして、環境物質や生活習慣といったリスク因子を調べることが多く、そのために**寄与割合（attributable fraction/excess fraction）**という指標も用いられます。寄与割合は、特定の集団におけるリスク因子への曝露が、どのくらい疾患発症に寄与するかを表す指標です。ただし、寄与割合には、歴史的に異なる定義のものが複数あり、どのような集団を**ターゲット**とするかで計算方法も変わるので、じゅうぶん意味を確認する必要がある指標です。
 
 あるリスク因子が国民全体の疾患発症にどの程度寄与するかを反映する指標は、集団寄与割合（population attributable fraction）と呼ばれています。ここで$RR$はリスク比、$p$は集団全体のうち群1が占める割合を意味しています。
@@ -77,27 +77,15 @@ $$
 :::
 
 ::: voice-father
-お父さん「うん。でもね、問題はそこだけじゃない。集団寄与割合にすごく似た別の指標が説明なしに使われることが結構あるってこと。リスク因子の割合が不要な指標もあって、集団寄与割合と混同されていることもある。実はこれはワクチン有効率とほとんど同じ式だったりする」
+お父さん「うん。でもね、問題はそこだけじゃない。集団寄与割合にすごく似た別の指標が説明なしに使われることが結構あるってこと。リスク因子の割合が不要な指標もあって、集団寄与割合と混同されていることもある。日本語では定訳があるわけではないけど、海外ではexcess fractionやpreventable fractionという専門用語が当てられているんだ。実はこの2つはワクチン有効率とほとんど同じ式だったりする」
 :::
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note appearance="simple"  title="寄与割合とその関連指標2. 集団全体とはターゲット集団が別の寄与割合"}
-曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのは、以下の定義によるものです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
--   過剰寄与割合（excess fraction）
-$$
-EF = \frac{\pi_1 - \pi_2}{\pi_1} = 1 - \frac{1}{RR}
-$$
+::: {.callout-note appearance="simple"  title="3種類の寄与割合"}
 
-その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、以下の指標が用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
-
--   予防寄与割合（preventable fraction）
-$$
-PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
-$$
-
-
-曝露集団をターゲットにする意義は、具体的な状況をイメージすると理解しやすくなります。環境疫学では、たとえば化学物質や放射線被ばくなど環境要因の健康影響を評価することが求められます。この場合では、集団全体ではなく、実際に環境要因に曝露した集団における被害を定量化する必要があるため、曝露集団をターゲットとしたexcess fractionがしばしば用いられます。同じような理由で、ワクチン・検診・運動などの予防法の新規導入が、個人のリスクをどれだけ下げたか知りたいときは、preventable fractionが好まれています。
+集団寄与割合以外の寄与割合として、excess fraction（過剰寄与割合）とpreventable fraction（予防寄与割合）がよく用いられます。これらの本質的な違いはターゲット集団にあります。
+集団全体ではなく、曝露集団をターゲットにする意義は、具体的な状況をイメージすると理解しやすくなります。環境疫学では、たとえば化学物質や放射線被ばくなど環境要因の健康影響を評価することが求められます。この場合では、集団全体ではなく、実際に環境要因に曝露した集団における被害を定量化する必要があるため、曝露集団をターゲットとしたexcess fractionがしばしば用いられます。同じような理由で、ワクチン・検診・運動などの予防法の新規導入が、個人のリスクをどれだけ下げたか知りたいときは、preventable fractionが好まれています。
 
 
 | 指標                | ターゲット集団 | 何を表す？                                                 |
@@ -105,6 +93,23 @@ $$
 | PAF（集団寄与割合） | 曝露+非曝露    | 集団全体の疾患のうち、どれだけがその曝露のため生じているか |
 | EF（過剰寄与割合）      | 曝露だけ       | 曝露集団のうち、どれだけの割合が曝露のため疾患を生じたか   |
 | PF（予防寄与割合）  | 曝露だけ       | 曝露集団のうち、どれだけ予防的な曝露が疾患を防いだか       | 
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="excess fractionとpreventable fraction"}
+曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのがexcess fractionであり、定義は以下の通りです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
+
+-   excess fraction（過剰寄与割合）
+$$
+EF = \frac{\pi_1 - \pi_2}{\pi_1} = 1 - \frac{1}{RR}
+$$
+
+その一方で、たとえば喫煙に対する禁煙のように、曝露が予防的に作用するとき、preventable fractionが用いられます。群1が曝露あり、群2が曝露なしという点は同じですが、ターゲットは群2です。なお、この式はワクチン有効率と同じです。
+
+-   preventable fraction（予防寄与割合）
+$$
+PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
+$$
+
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
