--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -276,8 +276,8 @@ generate_data <- function(n=200, hr1, hr2) {
 :::
 
 
-::: {.callout-note appearance="simple"  title="全生存期間（OS）のKaplan–Meier曲線"}
-OSとRFSは通常の生存時間データですから、前回と同様に**cifmodeling**パッケージの`cifplot()`を使って、Kaplan–Meier曲線で記述します。まずはOS。
+::: {.callout-note appearance="simple"  title="全生存期間（OS）のKaplan-Meier曲線"}
+OSとRFSは通常の生存時間データですから、前回と同様に**cifmodeling**パッケージの`cifplot()`を使って、Kaplan-Meier曲線で記述します。まずはOS。
 :::
 
 ::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
@@ -295,7 +295,7 @@ cifplot(Event(time_os, status_os) ~ stoma,
 ```
 :::
 
-::: {.callout-note appearance="simple"  title="無再発生存期間（RFS）のKaplan–Meier曲線"}
+::: {.callout-note appearance="simple"  title="無再発生存期間（RFS）のKaplan-Meier曲線"}
 次にRFSです。`Event()`で指定する変数以外は変わりません。
 :::
 
@@ -331,16 +331,16 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「Aalen-Johansen曲線って、Kaplan–Meier曲線のY軸を逆さにしただけじゃないの」
+私「Aalen-Johansen曲線って、Kaplan-Meier曲線のY軸を逆さにしただけじゃないの」
 :::
 
 ::: voice-father
 お父さん「グラフ上は見分けられないからそう思っても仕方ないよね。でもこのふたつは区別してほしい。
 
-> 生存曲線（Kaplan–Meier曲線）と累積発生曲線（Aalen-Johansen曲線）は別の統計手法なので
+> 生存曲線（Kaplan-Meier曲線）と累積発生曲線（Aalen-Johansen曲線）は別の統計手法なので
 > 競合リスクがあるときはAalen-Johansen曲線を用いる。
 
-ちなみに、relapse-free timeじゃなくてcumulative incidence of relapseを使いたいっていったけど、それは**累積発生曲線（cumulative incidence curve）**が、専門的にはAalen-Johansen曲線と同じ意味だからなんだよね。やろうと思えばCIRを解析するとき、Kaplan–Meier曲線を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
+ちなみに、relapse-free timeじゃなくてcumulative incidence of relapseを使いたいっていったけど、それは**累積発生曲線（cumulative incidence curve）**が、専門的にはAalen-Johansen曲線と同じ意味だからなんだよね。やろうと思えばCIRを解析するとき、Kaplan-Meier曲線を計算することもできるよ。このとき、再発を経験しない死亡は、競合リスク（`status_cir=2`）ではなく打ち切り（`status_cir=0`）として入力することになる。でも本来なら、死亡は、追跡期間終了や追跡不能による打ち切りとは、違う転帰だよね。だから競合リスクとして扱うのが正しい。
 :::
 
 ::: voice-daughter
