--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -84,8 +84,7 @@ $$
 
 ::: {.callout-note appearance="simple"  title="3種類の寄与割合"}
 
-集団寄与割合以外の寄与割合として、excess fraction（過剰寄与割合）とpreventable fraction（予防寄与割合）がよく用いられます。これらの本質的な違いはターゲット集団にあります。
-集団全体ではなく、曝露集団をターゲットにする意義は、具体的な状況をイメージすると理解しやすくなります。環境疫学では、たとえば化学物質や放射線被ばくなど環境要因の健康影響を評価することが求められます。この場合では、集団全体ではなく、実際に環境要因に曝露した集団における被害を定量化する必要があるため、曝露集団をターゲットとしたexcess fractionがしばしば用いられます。同じような理由で、ワクチン・検診・運動などの予防法の新規導入が、個人のリスクをどれだけ下げたか知りたいときは、preventable fractionが好まれています。
+集団寄与割合以外の寄与割合として、excess fraction（過剰寄与割合）とpreventable fraction（予防寄与割合）がよく用いられます。集団寄与割合との本質的な違いはターゲット集団にあります。このふたつの指標のターゲット集団は曝露集団です。
 
 
 | 指標                | ターゲット集団 | 何を表す？                                                 |
@@ -96,7 +95,8 @@ $$
 :::
 
 ::: {.callout-note appearance="simple" collapse="true" title="excess fractionとpreventable fraction"}
-曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されているのがexcess fractionであり、定義は以下の通りです。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
+
+Excess fractionは、曝露がリスク因子として働くときに用いられる指標として、多くの疫学の教科書で説明されており、以下のように定義されます。この指標では、群1が曝露あり、群2が曝露なしと考えています。そして、群1から曝露を取り除いたとき、どのくらい疾患が減るかを表しています。
 
 -   excess fraction（過剰寄与割合）
 $$
@@ -109,6 +109,7 @@ $$
 $$
 PF=\frac{\pi_2-\pi_1}{\pi_2}=1-RR
 $$
+集団全体ではなく、曝露集団をターゲットにする意義は、具体的な状況をイメージすると理解しやすくなります。環境疫学では、たとえば化学物質や放射線被ばくなど環境要因の健康影響を評価することが求められます。この場合では、集団全体ではなく、実際に環境要因に曝露した集団における被害を定量化する必要があるため、曝露集団をターゲットとしたexcess fractionがしばしば用いられます。同じような理由で、ワクチン・検診・運動などの予防法の新規導入が、個人のリスクをどれだけ下げたか知りたいときは、preventable fractionが好まれています。
 
 :::
 
