--- a/jp/frequentist-6.qmd
+++ b/jp/frequentist-6.qmd
@@ -87,13 +87,7 @@ Keywords: probability model, p-value, R simulation, study design
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple"  title="αエラーとβエラー"}
-
-これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
-
-JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
-
-このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを**検出力（power）**と呼んでいます。
+::: {.callout-note appearance="simple"  title="臨床試験の結果から判断を誤ってしまうふたつのケース"}
 
 | 研究結果 | 真に効果がない（帰無仮説） | 真に効果がある（対立仮説） |
 |----|----|----|
@@ -101,9 +95,19 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 | 有意差あり（p値\<有意水準） | αエラー | 検出力=1-β |
 :::
 
+
+::: {.callout-note appearance="simple" collapse="true" title="αエラーとβエラーの解説"}
+
+これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
+
+JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
+
+このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを**検出力（power）**と呼んでいます。
+:::
+
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「まあ当たり前だよね。左開胸開腹連続切開をしたLTA群で予後がよくならないのに、有意に効いたって判断したら間違いだし、逆にいい術式なのに、結果的に有意にならなかったらそれも研究失敗だし」
+私「まあ、このふたつのエラーがあるのは当たり前だよね。左開胸開腹連続切開をしたLTA群で予後がよくならないのに、有意に効いたって判断したら間違いだし、逆にいい術式なのに、結果的に有意にならなかったらそれも研究失敗だし」
 :::
 
 ::: voice-father
@@ -115,7 +119,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::
 :::::::::::::::::::::::::::::::::
 
-::: {.callout-note appearance="simple"  title="αエラー、βエラー、p値"}
+::: {.callout-note appearance="simple" title="αエラー、βエラー、p値"}
 
 αエラーとβエラーが生じる確率を考えてみましょう。理論的に考えると、サンプルサイズが大きくなるほど、ランダム誤差は小さくなります。αエラーとβエラーも同じで、サンプルサイズが大きいほど小さくなる（判断を誤りにくくなる）性質があります。しかし、2つのエラーはトレードオフの関係にあります。サンプルサイズが一定だと、両方同時に小さくすることはできません。そこで通常は、αエラーを優先して、事前に決めた水準よりも小さく保たれるような判定方式を用います。これが仮説検定であり、事前に決めた水準のことを有意水準と呼びます。実は、p\<0.05で判定することと有意水準を5%と設定することは、同じ意味です。
 
@@ -291,7 +295,7 @@ JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note appearance="simple"  collapse="true" title="Rパッケージを用いたサンプルサイズ設計のコードはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="Rパッケージを用いたサンプルサイズ設計のコードはこちら"}
 ```{r warning=FALSE}
 # install.packages("powerSurvEpi") #インストールが必要なら実行
 library(powerSurvEpi)
