--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -102,6 +102,14 @@ Keywords: bias, effect measure, R simulation, survival & competing risks
 
 それなのに多くの論文で“ハザード比＝一定”という前提で解析する。Cox回帰が標準的に使われるからね。だから、比例ハザード性が破綻すると、ハザード比の解釈が急に怪しくなる」
 :::
+
+::: voice-daughter
+私「んなこといっても、論文にはだいたいハザード比しか書いてないよね」
+:::
+
+::: voice-father
+「だから次の一手が必要になる。"ある時点のリスク"や"ある時点までの生存曲線"を比べるんだ。曲線が交差しても意味のある指標が得られる。これはCox回帰ではできないし、時点を決める必要があるけどね」
+:::
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
