--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -234,11 +234,19 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「ん？有意差がつかない臨床試験結果に価値がないとは思わないけど。臨床試験って、治療のよさを評価することが目的でしょ。有効性が示されるかどうかに関わらず、評価が定まったということに変わりはないじゃない」
+お父さん「ん？有意差がつかない臨床試験結果に価値がないとは思わないけど。臨床試験って、技術の性能評価が目的なじゃない？手術や薬といった医療技術のね。有効性が示されるかどうかに関わらず、評価が定まったということに変わりはないよね」
 :::
 
 ::: voice-daughter
-私「...ネガティブ試験でも価値が変わらないってことだよね。臨床試験は技術を評価するのが目的ってこと？科学的発見じゃなくて？」
+私「...。ネガティブ試験でも価値が変わらないってことをいってるよね？」
+:::
+
+::: voice-father
+お父さん「うん。たとえるならさ、臨床試験はペーパーテストと同じ"試験"ってことだよ。成績のよしあしと試験成績っていう情報の価値は無関係でしょ。p値は試験の点数みたいなもの。さっき話したp値に関する説明は、点数の"標準規格"みたいなもんで避けて通れないんだ。教科書的で退屈かもしれないけどね」
+:::
+
+::: voice-daughter
+私「臨床試験は技術を評価するのが目的ってこと？科学的発見じゃなくて？」
 :::
 
 ::: voice-father
