--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -205,12 +205,23 @@ cifplot(Event(time, status) ~ stoma,
 - イベント変数=2: イベントが観察される前に競合リスクが生じた
 
 ::: voice-daughter
-私「だいたいわかった。この調査票、使わせてもらうね」
+私「そうなんだ。イベント変数ってなんとなく0と1だと思ってたわ」
 :::
-::::::::::::::::::::::::::::::::: 
-
 
 ### 生存時間解析と競合リスク解析
+
+::: voice-father
+お父さん「競合リスクとあわせて知ってほしいのが、Kaplan-Meier曲線が生存曲線じゃなくなるってこと」
+:::
+
+::: voice-daughter
+私「どういう意味？」
+:::
+
+::: voice-father
+お父さん「ほら、生存と死亡しかなかったら、死亡確率の裏返しが生存確率でしょ。でも死因の内訳、たとえば原病死と他因死があって、他因死が競合リスクだったらどう？原病死の確率の裏返しは生存確率にならない。だから、競合リスク解析では、Kaplan-Meier曲線じゃなくてAalen-Johansen曲線を使う。ちょっとRの結果をみてほしい」
+:::
+::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="シミュレーションデータ（再発あり）の生成"}
 前回より少しだけがんの臨床研究を意識して、シミュレーションデータにおける、全生存期間（OS）・無再発生存期間（RFS）・累積再発率（CIR）の違いをみてみましょう。CIRの解析では、再発の前に死亡した患者が存在するため、その扱いを決める必要があります。これを**競合リスク（competing risk）**といいます。
@@ -331,7 +342,7 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「Aalen-Johansen曲線って、Kaplan-Meier曲線のY軸を逆さにしただけじゃないの」
+私「CIRの解析に使ったのがAalen-Johansen曲線ね。でもこれって、Kaplan-Meier曲線のY軸を逆さにしただけじゃないの」
 :::
 
 ::: voice-father
