--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -108,7 +108,7 @@ Keywords: bias, effect measure, R simulation, survival & competing risks
 :::
 
 ::: voice-father
-「だから次の一手が必要になる。"ある時点のリスク"や"ある時点までの生存曲線"を比べるんだ。曲線が交差しても意味のある指標が得られる。これはCox回帰ではできないし、時点を決める必要があるけどね」
+お父さん「だから次の一手が必要になる。"ある時点のリスク"や"ある時点までの生存曲線"を比べるんだ。曲線が交差していたら、5年生存率とか10年死亡率のようにどこを比較するか決める。ハザード比も重要だから、それとあわせてね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
