--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -234,7 +234,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「ん？有意差がつかない臨床試験結果に価値がないとは思わないけど。臨床試験って、技術の性能評価が目的なじゃない？手術や薬といった医療技術のね。有効性が示されるかどうかに関わらず、評価が定まったということに変わりはないよね」
+お父さん「ん？有意差がつかない臨床試験結果に価値がないとは思わないけど。臨床試験って、技術の性能評価が目的じゃない？手術や薬といった医療技術のね。有効性が示されるかどうかに関わらず、評価が定まったということに変わりはないよね」
 :::
 
 ::: voice-daughter
@@ -242,7 +242,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「うん。たとえるならさ、臨床試験はペーパーテストと同じ"試験"ってことだよ。成績のよしあしと試験成績っていう情報の価値は無関係でしょ。p値は試験の点数みたいなもの。さっき話したp値に関する説明は、点数の"標準規格"みたいなもんで避けて通れないんだ。教科書的で退屈かもしれないけどね」
+お父さん「うん。たとえるならさ、臨床試験はペーパーテストと同じ"試験"ってことだよ。合格・不合格と試験成績という情報の価値は無関係でしょ。さっき話したp値に関する説明は、採点ルールや試験の"標準規格"みたいなもので避けて通れないんだ。...点数がすべてじゃないけどね」
 :::
 
 ::: voice-daughter
@@ -250,7 +250,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「うん。歴史的にみて臨床試験は技術評価の制度の中で行われてきた。p値の使い方や、有効性エンドポイントの定義の標準化も、評価基準を一定に保つための工夫だった。臨床試験ってさ、各国の製薬企業が承認を得るために行ってきたものが中心でしょ。でも、90年代はまだ臨床試験の規格が統一されていなかった。90年代後半になって、米国、欧州、日本の規制当局が集まって臨床試験の標準規格を策定したんだ」
+お父さん「うん。歴史的にみて臨床試験は技術評価の制度の中で行われてきた。p値の使い方や、有効性エンドポイントの定義の標準化も、"試験の規格"を一定に保つための工夫だった。臨床試験ってさ、各国の製薬企業が承認を得るために行ってきたものが中心でしょ。でも、90年代はまだ各国の共通ルールが６６なかった。90年代後半になって、米国、欧州、日本の規制当局が集まって臨床試験の標準規格を策定したんだ」
 :::
 
 ::: voice-daughter
